# Treadmill

./: .gitignore  CHECKLIST_PRIMERA_PRUEBA.md  COMUNICACIONES.txt  ERRORES_CORREGIDOS.md  ESTADO_RAMAS.md  IMPLEMENTACION_COMPLETA.md  INFORME_WIFI_SDIO_BUG.md  INSTRUCCIONES_CLAUDE.md  INSTRUCCIONES_WIFI.md  Instrucciones_GITHUB.txt  Nuevo Documento de texto.txt  RESUMEN_IMPLEMENTACION_WIFI.md  WORKFLOW_SIMPLE.md  documentacion.txt  log.txt  tarea.txt  test_rele_pin32.ino
.claude/: settings.local.json
Base/: README.md
Base/docs/: CALIBRACION.md  VFD_CONFIG.md
Base/main/: main.c  speed_sensor.c  speed_sensor.h  vfd_driver.c  vfd_driver.h
Consola/: CMakeLists.txt  HTTPS_DOWNLOAD_README.md  Plantilla.code-workspace  README.md  idf_component.yml  log.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
Consola/.claude/: settings.local.json
Consola/docs/: BLE.md  COMUNICACION_RS485.md  HARDWARE.md  INTERFAZ_GRAFICA.md  WIFI.md  (+1 more)
Consola/main/: CMakeLists.txt  audio.c  audio.h  ble_client.c  ble_client.h  button_handler.c  button_handler.h  cm_master.c  cm_master.h  display_driver.c  display_driver.h  idf_component.yml  main.c  touch_driver.c  touch_driver.h  treadmill_state.c  treadmill_state.h  ui.c  ui.c.backup  ui.h  ui_wifi.c  wifi_client.c  wifi_client.c.backup  wifi_client.h  wifi_manager.c  wifi_manager.h
Consola/main/fonts/: chivo_mono_100.c  chivo_mono_70.c  dejavu_mono_50.c
Sala_Maquinas/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
Sala_Maquinas/main/: CMakeLists.txt  main.c  vfd_driver.c
test_fin_de_carrera/: test_fin_de_carrera.ino
test_rele_pin32/: test_rele_pin32.ino
(+16 files in other folders)
